Profile Image added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
 				<a href="">My Projects</a>
 				<a href="">Photos</a>
 		</nav>
-		
+		<section>
+			
+			<div id="img_profile">
+				<img src="img/profile.png"/>
+				<div id="social_link">
+					<a href="https://www.facebook.com/amandeeptheviper" target="_blank"><img src="img/facebook.png"></a>
+					<a href="https://github.com/codingeass" target="_blank"><img src="img/github.png" style="top:325px;"></a>
+					<a href="http://in.linkedin.com/pub/amandeep-gupta/69/26b/5a9" target="_blank"><img src="img/linkedin1.png"></a>
+					<a href="https://twitter.com/amantheviper" target="_blank"><img src="img/twitter.png"></a>
+					<a href="https://theviperbites.blogspot.in" target="_blank"><img src="img/rss.png"></a>
+				</div>
+			</div>
+			
+		</section>
 	
 	</section>
 
