Second side added on front page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
 					<a href="https://theviperbites.blogspot.in" target="_blank"><img src="img/rss.png"></a>
 				</div>
 			</div>
-			
+			<div id="text_side">
+				<div id="quotes">
+					&#8221;The question of whether a computer can think is no more interesting than the question of whether a submarine can swim. &#8221;
+					<div id="author">
+						-Edsger W. Dijkstra
+					</div>
+				</div>
+			</div>
 		</section>
 	
 	</section>
