--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-<link rel="stylesheet" href="main.css"/>
+<link rel="stylesheet" href="public/css/bootstrap.min.css"/>
+<link rel="stylesheet" href="public/css/style.css"/>
 </head>
 <body>
 
