img folder moved , link changed

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 		<section>
 			
 			<div id="img_profile">
-				<img src="img/profile.png"/>
+				<img src="public/img/profile.png"/>
 				<div id="social_link">
-					<a href="https://www.facebook.com/amandeeptheviper" target="_blank"><img src="img/facebook.png"></a>
-					<a href="https://github.com/codingeass" target="_blank"><img src="img/github.png" style="top:325px;"></a>
-					<a href="http://in.linkedin.com/pub/amandeep-gupta/69/26b/5a9" target="_blank"><img src="img/linkedin1.png"></a>
-					<a href="https://twitter.com/amantheviper" target="_blank"><img src="img/twitter.png"></a>
-					<a href="https://theviperbites.blogspot.in" target="_blank"><img src="img/rss.png"></a>
+					<a href="https://www.facebook.com/amandeeptheviper" target="_blank"><img src="public/img/facebook.png"></a>
+					<a href="https://github.com/codingeass" target="_blank"><img src="public/img/github.png" style="top:325px;"></a>
+					<a href="http://in.linkedin.com/pub/amandeep-gupta/69/26b/5a9" target="_blank"><img src="public/img/linkedin1.png"></a>
+					<a href="https://twitter.com/amantheviper" target="_blank"><img src="public/img/twitter.png"></a>
+					<a href="https://theviperbites.blogspot.in" target="_blank"><img src="public/img/rss.png"></a>
 				</div>
 			</div>
 
