--- a/index.html
+++ b/index.html
@@ -5,25 +5,30 @@
 </head>
 <body>
 
-	<section class="first_section">
-		<nav id="nav_first">
-				<a href="">About Me</a>
-				<a href="">My Projects</a>
-				<a href="">Photos</a>
-		</nav>
-		<section>
-			
-			<div id="img_profile">
-				<img src="public/img/profile.png"/>
+	<section class="first_section container">
+		<div class="row">
+		<div class="col-md-12 collapse navbar-collapse navbar-right bs-example-js-navbar-collapse" >
+			<ul class="nav navbar-nav" id="nav_first">
+				<li class="active"><a href="#">About Me</a></li>
+				<li><a href="">My Projects</a></li>
+				<li><a href="">Photos</a></li>
+			</ul>
+		</div>
+		</div>
+			<div class="row">
+			<div class="col-md-4" id="img_profile">
+			<div  class="text-center">
+				<img src="img/profile.png" id="profile_pic"/>
 				<div id="social_link">
-					<a href="https://www.facebook.com/amandeeptheviper" target="_blank"><img src="public/img/facebook.png"></a>
-					<a href="https://github.com/codingeass" target="_blank"><img src="public/img/github.png" style="top:325px;"></a>
-					<a href="http://in.linkedin.com/pub/amandeep-gupta/69/26b/5a9" target="_blank"><img src="public/img/linkedin1.png"></a>
-					<a href="https://twitter.com/amantheviper" target="_blank"><img src="public/img/twitter.png"></a>
-					<a href="https://theviperbites.blogspot.in" target="_blank"><img src="public/img/rss.png"></a>
+					<a href="https://www.facebook.com/amandeeptheviper" target="_blank"><img src="img/facebook.png"></a>
+					<a href="https://github.com/codingeass" target="_blank"><img src="img/github.png" style="top:325px;"></a>
+					<a href="http://in.linkedin.com/pub/amandeep-gupta/69/26b/5a9" target="_blank"><img src="img/linkedin1.png"></a>
+					<a href="https://twitter.com/codingeass" target="_blank"><img src="img/twitter.png"></a>
+					<!--<a href="https://theviperbites.blogspot.in" target="_blank"><img src="img/rss.png"></a>-->
 				</div>
 			</div>
-
+			</div>
+			<div class="col-md-8">
 			<div id="text_side">
 				<div id="quotes">
 					&#8221;The question of whether a computer can think is no more interesting than the question of whether a submarine can swim. &#8221;
@@ -32,9 +37,8 @@
 					</div>
 				</div>
 			</div>
-
-		</section>
-	
+			</div>
+			</div>
 	</section>
 
 </body>
