Carousel added for projects

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <link rel="stylesheet" href="public/css/bootstrap.min.css"/>
 <link rel="stylesheet" href="public/css/style.css"/>
+<title>Codingeass</title>
 </head>
 <body>
 
@@ -18,13 +19,13 @@
 			<div class="row">
 			<div class="col-md-4" id="img_profile">
 			<div  class="text-center">
-				<img src="img/profile.png" id="profile_pic"/>
+				<img src="public/img/profile.png" id="profile_pic"/>
 				<div id="social_link">
-					<a href="https://www.facebook.com/amandeeptheviper" target="_blank"><img src="img/facebook.png"></a>
-					<a href="https://github.com/codingeass" target="_blank"><img src="img/github.png" style="top:325px;"></a>
-					<a href="http://in.linkedin.com/pub/amandeep-gupta/69/26b/5a9" target="_blank"><img src="img/linkedin1.png"></a>
-					<a href="https://twitter.com/codingeass" target="_blank"><img src="img/twitter.png"></a>
-					<!--<a href="https://theviperbites.blogspot.in" target="_blank"><img src="img/rss.png"></a>-->
+					<a href="https://www.facebook.com/amandeeptheviper" target="_blank"><img src="public/img/facebook.png"></a>
+					<a href="https://github.com/codingeass" target="_blank"><img src="public/img/github.png" style="top:325px;"></a>
+					<a href="http://in.linkedin.com/pub/amandeep-gupta/69/26b/5a9" target="_blank"><img src="public/img/linkedin1.png"></a>
+					<a href="https://twitter.com/codingeass" target="_blank"><img src="public/img/twitter.png"></a>
+					<!--<a href="https://theviperbites.blogspot.in" target="_blank"><img src="public/img/rss.png"></a>-->
 				</div>
 			</div>
 			</div>
@@ -37,9 +38,100 @@
 					</div>
 				</div>
 			</div>
+			
+			<div id="projects">
+				 <div id="carousel" class="carousel slide" data-ride="carousel">
+          <!--
+            <ol class="carousel-indicators">
+                <li data-target="#carousel" data-slide-to="0"></li>
+                <li data-target="#carousel" data-slide-to="1"></li>
+            </ol>
+        -->
+            <div class="carousel-inner">
+                <div class="item active">
+                <div class="row">
+          		<div class="col-sm-6 col-md-4">
+	                <div class="thumbnail project_icon">
+	                  <img alt="resurgence" src="public/img/resurgence.jpg"  style="height: 150px; display: block;">
+	                  <div class="caption">
+	                    <h4>Resurgence Website</h4>
+	                    <p>SMVDU Annual Cultural Festival Website</p>
+	                  </div>
+	                </div>
+            	</div>
+            	<div class="col-sm-6 col-md-4">
+	                <div class="thumbnail project_icon">
+	                  <img alt="titiksha" src="public/img/titiksha.jpg"  style="height: 150px; display: block;">
+	                  <div class="caption">
+	                    <h4>Titiksha Website</h4>
+	                    <p>SMVDU Annual Techinical Festival Website</p>
+	                  </div>
+	                </div>
+            	</div>
+	            <div class="col-sm-6 col-md-4">
+	                <div class="thumbnail project_icon">
+	                  <img alt="interaction" src="public/img/interaction.jpg"  style="height: 150px; display: block;">
+	                  <div class="caption">
+	                    <h4>Interaction SMVDU</h4>
+	                    <p>Student and Faculty Interaction system for a College.</p>
+	                  </div>
+	                </div>
+	            </div>
+        		</div>
+                </div>
+                <div class="item">
+                <div class="row">
+					<div class="col-sm-6 col-md-4">
+				        <div class="thumbnail project_icon">
+				          <img alt="resurgence" src="public/img/inventory.jpg" data-holder-rendered="true" style="height: 150px; display: block;">
+				          <div class="caption">
+				            <h4>Inventory Control System</h4>
+				            <p>Software in Java to control the buying and Selling of inventories.</p>
+				          </div>
+				        </div>
+				    </div>
+				    <div class="col-sm-6 col-md-4">
+				        <div class="thumbnail project_icon">
+				          <img alt="titiksha" src="public/img/titiksha.jpg" data-holder-rendered="true" style="height: 150px; display: block;">
+				          <div class="caption">
+				            <h4>Titiksha Website</h4>
+				            <p>SMVDU Annual Techinical Festival Website</p>
+				          </div>
+				        </div>
+				    </div>
+				    <div class="col-sm-6 col-md-4">
+				        <div class="thumbnail project_icon">
+				          <img alt="interaction" src="public/img/interaction.jpg" data-holder-rendered="true" style="height: 150px; display: block;">
+				          <div class="caption">
+				            <h4>Interaction SMVDU</h4>
+				            <p>Student and Faculty Interaction system for a College.</p>
+				          </div>
+				        </div>
+				    </div>
+				</div>
+			</div>
+			<!--
+                <div class="item">
+                    <img src="img/slide_3.png" alt="Slide 3">
+                </div>
+            -->
+            </div>
+            <a href="#carousel" class="left carousel-control" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+            </a>
+            <a href="#carousel" class="right carousel-control" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+            </a>
+        </div>
+
+        
+			</div>
 			</div>
 			</div>
 	</section>
+	
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script type="text/javascript" src="public/js/bootstrap.min.js"></script>
 
 </body>
 
