all file moved to dist from public

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-<link rel="stylesheet" href="public/css/bootstrap.min.css"/>
-<link rel="stylesheet" href="public/css/style.css"/>
+<link rel="stylesheet" href="dist/css/bootstrap.min.css"/>
+<link rel="stylesheet" href="dist/css/style.css"/>
 <title>Codingeass</title>
 </head>
 <body>
@@ -19,13 +19,13 @@
 			<div class="row">
 			<div class="col-md-4" id="img_profile">
 			<div  class="text-center">
-				<img src="public/img/profile.png" id="profile_pic"/>
+				<img src="dist/img/profile.png" id="profile_pic"/>
 				<div id="social_link">
-					<a href="https://www.facebook.com/amandeeptheviper" target="_blank"><img src="public/img/facebook.png"></a>
-					<a href="https://github.com/codingeass" target="_blank"><img src="public/img/github.png" style="top:325px;"></a>
-					<a href="http://in.linkedin.com/pub/amandeep-gupta/69/26b/5a9" target="_blank"><img src="public/img/linkedin1.png"></a>
-					<a href="https://twitter.com/codingeass" target="_blank"><img src="public/img/twitter.png"></a>
-					<!--<a href="https://theviperbites.blogspot.in" target="_blank"><img src="public/img/rss.png"></a>-->
+					<a href="https://www.facebook.com/amandeeptheviper" target="_blank"><img src="dist/img/facebook.png"></a>
+					<a href="https://github.com/codingeass" target="_blank"><img src="dist/img/github.png" style="top:325px;"></a>
+					<a href="http://in.linkedin.com/pub/amandeep-gupta/69/26b/5a9" target="_blank"><img src="dist/img/linkedin1.png"></a>
+					<a href="https://twitter.com/codingeass" target="_blank"><img src="dist/img/twitter.png"></a>
+					<!--<a href="https://theviperbites.blogspot.in" target="_blank"><img src="dist/img/rss.png"></a>-->
 				</div>
 			</div>
 			</div>
@@ -52,7 +52,7 @@
                 <div class="row">
           		<div class="col-sm-6 col-md-4">
 	                <div class="thumbnail project_icon">
-	                  <img alt="resurgence" src="public/img/resurgence.jpg"  style="height: 150px; display: block;">
+	                  <img alt="resurgence" src="dist/img/resurgence.jpg"  style="height: 150px; display: block;">
 	                  <div class="caption">
 	                    <h4>Resurgence Website</h4>
 	                    <p>SMVDU Annual Cultural Festival Website</p>
@@ -61,7 +61,7 @@
             	</div>
             	<div class="col-sm-6 col-md-4">
 	                <div class="thumbnail project_icon">
-	                  <img alt="titiksha" src="public/img/titiksha.jpg"  style="height: 150px; display: block;">
+	                  <img alt="titiksha" src="dist/img/titiksha.jpg"  style="height: 150px; display: block;">
 	                  <div class="caption">
 	                    <h4>Titiksha Website</h4>
 	                    <p>SMVDU Annual Techinical Festival Website</p>
@@ -70,7 +70,7 @@
             	</div>
 	            <div class="col-sm-6 col-md-4">
 	                <div class="thumbnail project_icon">
-	                  <img alt="interaction" src="public/img/interaction.jpg"  style="height: 150px; display: block;">
+	                  <img alt="interaction" src="dist/img/interaction.jpg"  style="height: 150px; display: block;">
 	                  <div class="caption">
 	                    <h4>Interaction SMVDU</h4>
 	                    <p>Student and Faculty Interaction system for a College.</p>
@@ -83,7 +83,7 @@
                 <div class="row">
 					<div class="col-sm-6 col-md-4">
 				        <div class="thumbnail project_icon">
-				          <img alt="resurgence" src="public/img/inventory.jpg" data-holder-rendered="true" style="height: 150px; display: block;">
+				          <img alt="resurgence" src="dist/img/inventory.jpg" data-holder-rendered="true" style="height: 150px; display: block;">
 				          <div class="caption">
 				            <h4>Inventory Control System</h4>
 				            <p>Software in Java to control the buying and Selling of inventories.</p>
@@ -92,7 +92,7 @@
 				    </div>
 				    <div class="col-sm-6 col-md-4">
 				        <div class="thumbnail project_icon">
-				          <img alt="titiksha" src="public/img/titiksha.jpg" data-holder-rendered="true" style="height: 150px; display: block;">
+				          <img alt="titiksha" src="dist/img/titiksha.jpg" data-holder-rendered="true" style="height: 150px; display: block;">
 				          <div class="caption">
 				            <h4>Titiksha Website</h4>
 				            <p>SMVDU Annual Techinical Festival Website</p>
@@ -101,7 +101,7 @@
 				    </div>
 				    <div class="col-sm-6 col-md-4">
 				        <div class="thumbnail project_icon">
-				          <img alt="interaction" src="public/img/interaction.jpg" data-holder-rendered="true" style="height: 150px; display: block;">
+				          <img alt="interaction" src="dist/img/interaction.jpg" data-holder-rendered="true" style="height: 150px; display: block;">
 				          <div class="caption">
 				            <h4>Interaction SMVDU</h4>
 				            <p>Student and Faculty Interaction system for a College.</p>
@@ -131,7 +131,7 @@
 	</section>
 	
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script type="text/javascript" src="public/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="dist/js/bootstrap.min.js"></script>
 
 </body>
 
