added more project

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			</div>
 			
 			<div id="projects">
-				 <div id="carousel" class="carousel slide" data-ride="carousel">
+				 <div id="carousel" class="carousel slide" data-ride="carousel" data-interval="false">
           <!--
             <ol class="carousel-indicators">
                 <li data-target="#carousel" data-slide-to="0"></li>
@@ -92,19 +92,19 @@
 				    </div>
 				    <div class="col-sm-6 col-md-4">
 				        <div class="thumbnail project_icon">
-				          <img alt="titiksha" src="dist/img/titiksha.jpg" data-holder-rendered="true" style="height: 150px; display: block;">
+				          <img alt="Personal Encyclopedia" src="dist/img/personal.png" data-holder-rendered="true" style="height: 150px; display: block;">
 				          <div class="caption">
-				            <h4>Titiksha Website</h4>
-				            <p>SMVDU Annual Techinical Festival Website</p>
+				            <h4>Personal Encyclopedia</h4>
+				            <p>Software to help maintain your data and notes and provide search option to manage your data in effective manner.</p>
 				          </div>
 				        </div>
 				    </div>
 				    <div class="col-sm-6 col-md-4">
 				        <div class="thumbnail project_icon">
-				          <img alt="interaction" src="dist/img/interaction.jpg" data-holder-rendered="true" style="height: 150px; display: block;">
+				          <img alt="monet" src="dist/img/monet.png" data-holder-rendered="true" style="height: 150px; display: block;">
 				          <div class="caption">
-				            <h4>Interaction SMVDU</h4>
-				            <p>Student and Faculty Interaction system for a College.</p>
+				            <h4>Monet</h4>
+				            <p>This application is designed using java. It helps in searching of local network for shared files.</p>
 				          </div>
 				        </div>
 				    </div>
