--- a/index.html
+++ b/index.html
@@ -2,133 +2,56 @@
 <head>
 <link rel="stylesheet" href="dist/css/bootstrap.min.css"/>
 <link rel="stylesheet" href="dist/css/style.css"/>
+<script type="text/javascript" src="dist/js/main.js"></script>
 <title>Codingeass</title>
 </head>
 <body>
 
 	<section class="first_section container">
+		
 		<div class="row">
+		
 		<div class="col-md-12 collapse navbar-collapse navbar-right bs-example-js-navbar-collapse" >
 			<ul class="nav navbar-nav" id="nav_first">
 				<li class="active"><a href="#">About Me</a></li>
-				<li><a href="">My Projects</a></li>
-				<li><a href="">Photos</a></li>
+				<li><a href="#projects" onclick='content_change("project")'>My Projects</a></li>
+				<!--<li><a href="">Photos</a></li>-->
 			</ul>
 		</div>
+		
 		</div>
-			<div class="row">
-			<div class="col-md-4" id="img_profile">
-			<div  class="text-center">
-				<img src="dist/img/profile.png" id="profile_pic"/>
-				<div id="social_link">
-					<a href="https://www.facebook.com/amandeeptheviper" target="_blank"><img src="dist/img/facebook.png"></a>
-					<a href="https://github.com/codingeass" target="_blank"><img src="dist/img/github.png" style="top:325px;"></a>
-					<a href="http://in.linkedin.com/pub/amandeep-gupta/69/26b/5a9" target="_blank"><img src="dist/img/linkedin1.png"></a>
-					<a href="https://twitter.com/codingeass" target="_blank"><img src="dist/img/twitter.png"></a>
-					<!--<a href="https://theviperbites.blogspot.in" target="_blank"><img src="dist/img/rss.png"></a>-->
-				</div>
-				<div id="text_side">
-				<div id="quotes">
-					&#8221;The question of whether a computer can think is no more interesting than the question of whether a submarine can swim. &#8221;
-					<div id="author">
-						-Edsger W. Dijkstra
-					</div>
-				</div>
-			</div>
-			
-			</div>
-			</div>
-			<div class="col-md-8">
-			
-			<div id="projects">
-				 <div id="carousel" class="carousel slide" data-ride="carousel" data-interval="false">
-          <!--
-            <ol class="carousel-indicators">
-                <li data-target="#carousel" data-slide-to="0"></li>
-                <li data-target="#carousel" data-slide-to="1"></li>
-            </ol>
-        -->
-            <div class="carousel-inner">
-                <div class="item active">
-                <div class="row">
-          		<div class="col-sm-6 col-md-4">
-	                <div class="thumbnail project_icon">
-	                  <img alt="resurgence" src="dist/img/resurgence.jpg"  style="height: 150px; display: block;">
-	                  <div class="caption">
-	                    <h4>Resurgence Website</h4>
-	                    <p>SMVDU Annual Cultural Festival Website</p>
-	                  </div>
-	                </div>
-            	</div>
-            	<div class="col-sm-6 col-md-4">
-	                <div class="thumbnail project_icon">
-	                  <img alt="titiksha" src="dist/img/titiksha.jpg"  style="height: 150px; display: block;">
-	                  <div class="caption">
-	                    <h4>Titiksha Website</h4>
-	                    <p>SMVDU Annual Techinical Festival Website</p>
-	                  </div>
-	                </div>
-            	</div>
-	            <div class="col-sm-6 col-md-4">
-	                <div class="thumbnail project_icon">
-	                  <img alt="interaction" src="dist/img/interaction.jpg"  style="height: 150px; display: block;">
-	                  <div class="caption">
-	                    <h4>Interaction SMVDU</h4>
-	                    <p>Student and Faculty Interaction system for a College.</p>
-	                  </div>
-	                </div>
-	            </div>
-        		</div>
-                </div>
-                <div class="item">
-                <div class="row">
-					<div class="col-sm-6 col-md-4">
-				        <div class="thumbnail project_icon">
-				          <img alt="resurgence" src="dist/img/inventory.jpg" data-holder-rendered="true" style="height: 150px; display: block;">
-				          <div class="caption">
-				            <h4>Inventory Control System</h4>
-				            <p>Software in Java to control the buying and Selling of inventories.</p>
-				          </div>
-				        </div>
-				    </div>
-				    <div class="col-sm-6 col-md-4">
-				        <div class="thumbnail project_icon">
-				          <img alt="Personal Encyclopedia" src="dist/img/personal.png" data-holder-rendered="true" style="height: 150px; display: block;">
-				          <div class="caption">
-				            <h4>Personal Encyclopedia</h4>
-				            <p>Software to help maintain your data and notes and provide search option to manage your data in effective manner.</p>
-				          </div>
-				        </div>
-				    </div>
-				    <div class="col-sm-6 col-md-4">
-				        <div class="thumbnail project_icon">
-				          <img alt="monet" src="dist/img/monet.png" data-holder-rendered="true" style="height: 150px; display: block;">
-				          <div class="caption">
-				            <h4>Monet</h4>
-				            <p>This application is designed using java. It helps in searching of local network for shared files.</p>
-				          </div>
-				        </div>
-				    </div>
-				</div>
-			</div>
-			<!--
-                <div class="item">
-                    <img src="img/slide_3.png" alt="Slide 3">
-                </div>
-            -->
-            </div>
-            <a href="#carousel" class="left carousel-control" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-            </a>
-            <a href="#carousel" class="right carousel-control" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right"></span>
-            </a>
-        </div>
 
-        
+		<div class="row">
+		
+		<div class="col-md-4" id="img_profile">
+		<div  class="text-center">
+			<img src="dist/img/profile.png" id="profile_pic"/>
+			<div id="social_link">
+				<a href="https://www.facebook.com/amandeeptheviper" target="_blank"><img src="dist/img/facebook.png"></a>
+				<a href="https://github.com/codingeass" target="_blank"><img src="dist/img/github.png" style="top:325px;"></a>
+				<a href="http://in.linkedin.com/pub/amandeep-gupta/69/26b/5a9" target="_blank"><img src="dist/img/linkedin1.png"></a>
+				<a href="https://twitter.com/codingeass" target="_blank"><img src="dist/img/twitter.png"></a>
+				<!--<a href="https://theviperbites.blogspot.in" target="_blank"><img src="dist/img/rss.png"></a>-->
 			</div>
+			<div id="text_side">
+			<div id="quotes">
+				&#8221;The question of whether a computer can think is no more interesting than the question of whether a submarine can swim. &#8221;
+				<div id="author">
+					-Edsger W. Dijkstra
+				</div>
 			</div>
-			</div>
+		</div>
+		
+		</div>
+		</div>
+		<div class="col-md-8">
+		
+		<div id="content_dir">
+			
+		</div>
+
+		</div>
+		</div>
 	</section>
 	
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
