--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <link rel="stylesheet" href="dist/css/bootstrap.min.css"/>
 <link rel="stylesheet" href="dist/css/style.css"/>
+<link rel="icon" type="/image/png" href="dist/img/profile.png" />
 <script type="text/javascript" src="dist/js/main.js"></script>
 <title>Codingeass</title>
 </head>
