--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		<div class="col-md-4" id="img_profile">
 		<div  class="text-center">
 			<img src="dist/img/profile.png" id="profile_pic"/>
+			<div id="aboutme_short">Web Developer | Programmer </div>
 			<div id="social_link">
 				<a href="https://www.facebook.com/amandeeptheviper" target="_blank"><img src="dist/img/facebook.png"></a>
 				<a href="https://github.com/codingeass" target="_blank"><img src="dist/img/github.png" style="top:325px;"></a>
