--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="col-md-12 collapse navbar-collapse navbar-right bs-example-js-navbar-collapse" >
 			<ul class="nav navbar-nav" id="nav_first">
 				<li class="active"><a href="#">About Me</a></li>
-				<li><a href="#projects" onclick='content_change("project")'>My Projects</a></li>
+				<li><a href="" onclick='content_change("project")'>My Projects</a></li>
 				<!--<li><a href="">Photos</a></li>-->
 			</ul>
 		</div>
