--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <link rel="stylesheet" href="dist/css/bootstrap.min.css"/>
 <link rel="stylesheet" href="dist/css/style.css"/>
+<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Tangerine">
 <link rel="icon" type="/image/png" href="dist/img/profile.png" />
 <script type="text/javascript" src="dist/js/main.js"></script>
 <title>Codingeass</title>
@@ -15,7 +16,7 @@
 		<div class="col-md-12 collapse navbar-collapse navbar-right bs-example-js-navbar-collapse" >
 			<ul class="nav navbar-nav" id="nav_first">
 				<li class="active"><a href="#">About Me</a></li>
-				<li><a href="" onclick='content_change("project")'>My Projects</a></li>
+				<li><a  onclick='content_change("project")'>My Projects</a></li>
 				<!--<li><a href="">Photos</a></li>-->
 			</ul>
 		</div>
@@ -27,7 +28,10 @@
 		<div class="col-md-4" id="img_profile">
 		<div  class="text-center">
 			<img src="dist/img/profile.png" id="profile_pic"/>
-			<div id="aboutme_short">Web Developer | Programmer </div>
+			<div id="aboutme_short">AMANDEEP GUPTA<br/><section style="font-size:15px;">Web Developer | Programmer<section> </div>
+			
+			<!--<a href="https://twitter.com/codingeass" class="twitter-follow-button" data-show-count="false">Follow @codingeass</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>-->
+			
 			<div id="social_link">
 				<a href="https://www.facebook.com/amandeeptheviper" target="_blank"><img src="dist/img/facebook.png"></a>
 				<a href="https://github.com/codingeass" target="_blank"><img src="dist/img/github.png" style="top:325px;"></a>
