--- a/index.html
+++ b/index.html
@@ -12,14 +12,27 @@
 	<section class="first_section container">
 		
 		<div class="row">
-		
-		<div class="col-md-12 collapse navbar-collapse navbar-right bs-example-js-navbar-collapse" >
-			<ul class="nav navbar-nav" id="nav_first">
-				<li class="active"><a onclick='content_change("about")'>About Me</a></li>
-				<li><a  onclick='content_change("project")'>My Projects</a></li>
-				<!--<li><a href="">Photos</a></li>-->
-			</ul>
-		</div>
+      <!-- Static navbar -->
+	      <nav class="navbar navbar-default navbar-static-top" id="nav_first">
+	        <div class="container-fluid">
+	          <div class="navbar-header">
+	            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+	              <span class="sr-only">Toggle navigation</span>
+	              <span class="icon-bar"></span>
+	              <span class="icon-bar"></span>
+	              <span class="icon-bar"></span>
+	            </button>
+		   <!-- <a class="navbar-brand" href="#">Amandeep Gupta</a>-->
+
+	          </div>
+	          <div id="navbar" class="navbar-collapse collapse">
+	            <ul class="nav navbar-nav navbar-right">
+	              <li onclick='active_css(this)'><a onclick='content_change("about")'>About Me</a></li>
+	              <li class="active" onclick='active_css(this)'><a onclick='content_change("project")'>My Projects</a></li>           
+	            </ul>
+	          </div><!--/.nav-collapse -->
+	        </div><!--/.container-fluid -->
+	      </nav>
 		
 		</div>
 
@@ -28,7 +41,8 @@
 		<div class="col-md-4" id="img_profile">
 		<div  class="text-center">
 			<img src="dist/img/profile.png" id="profile_pic"/>
-			<div id="aboutme_short">AMANDEEP GUPTA<br/><section style="font-size:15px;">Web Developer | Programmer<section> </div>
+			<div id="aboutme_short">AMANDEEP GUPTA<br/><section style="font-size:15px;">Web Developer | Programmer<section> 
+			</div>
 			
 			<!--<a href="https://twitter.com/codingeass" class="twitter-follow-button" data-show-count="false">Follow @codingeass</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>-->
 			
@@ -47,8 +61,7 @@
 				</div>
 			</div>
 			</div>
-		</div>
-		<br/>
+			</div>
 		</div>
 		<div class="col-md-8">
 		
@@ -60,7 +73,7 @@
 		</div>
 	</section>
 	
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script type="text/javascript" src="dist/js/bootstrap.min.js"></script>
 
 </body>
