--- a/index.html
+++ b/index.html
@@ -64,11 +64,15 @@
 			</div>
 		</div>
 		<div class="col-md-8">
-		
+
 		<div id="content_dir">
 			
 		</div>
-
+		<!--
+		<div id="loader">
+			<img src="dist/img/loader.gif">
+		</div>
+		-->
 		</div>
 		</div>
 	</section>
