--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@
 			<!--<a href="https://twitter.com/codingeass" class="twitter-follow-button" data-show-count="false">Follow @codingeass</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>-->
 			
 			<div id="social_link">
+				<a href="mailto:amandeepgupta@rocketmail.com" target="_blank"><img src="dist/img/mail.png" style="top:325px;"></a>
 				<a href="https://www.facebook.com/amandeeptheviper" target="_blank"><img src="dist/img/facebook.png"></a>
 				<a href="https://github.com/codingeass" target="_blank"><img src="dist/img/github.png" style="top:325px;"></a>
-				<a href="http://in.linkedin.com/pub/amandeep-gupta/69/26b/5a9" target="_blank"><img src="dist/img/linkedin1.png"></a>
+				<a href="https://in.linkedin.com/in/codingeass" target="_blank"><img src="dist/img/linkedin1.png"></a>
 				<a href="https://twitter.com/codingeass" target="_blank"><img src="dist/img/twitter.png"></a>
 				<!--<a href="https://theviperbites.blogspot.in" target="_blank"><img src="dist/img/rss.png"></a>-->
 			</div>
