--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
 <link rel="icon" type="/image/png" href="dist/img/profile.png" />
 <script type="text/javascript" src="dist/js/main.js"></script>
 <title>Codingeass</title>
+<!-- Analytics-->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-62402924-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
 </head>
 <body>
 
@@ -101,16 +113,6 @@
 	
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script type="text/javascript" src="dist/js/bootstrap.min.js"></script>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-62402924-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
 </body>
 
 </html>
