removed facebook connection

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			
 			<div id="social_link">
 				<a href="mailto:amandeepgupta@rocketmail.com" target="_blank"><img src="dist/img/mail.png" style="top:325px;"></a>
-				<a href="https://www.facebook.com/amandeeptheviper" target="_blank"><img src="dist/img/facebook.png"></a>
+				<!--<a href="https://www.facebook.com/amandeeptheviper" target="_blank"><img src="dist/img/facebook.png"></a>-->
 				<a href="https://github.com/codingeass" target="_blank"><img src="dist/img/github.png" style="top:325px;"></a>
 				<a href="https://in.linkedin.com/in/codingeass" target="_blank"><img src="dist/img/linkedin1.png"></a>
 				<a href="https://twitter.com/codingeass" target="_blank"><img src="dist/img/twitter.png"></a>
