--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<meta name="description" content="Portfolio , Amandeep Gupta : Web Developer | Software Developer | Programmer">
       
     <meta name="keywords" content="Amandeep Gupta,Kendriya Vidyalaya Gomti nagar, Jammu, Katra, Lucknow , amandeepgupta@rocketmail.com, codingeass, SMVDU, Computer Science , CSE , Web Developer, software engineer , software , Web designer ,Shri Mata Vaishno Devi University, resurgence, smvd university">
-    
+     <meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Portfolio: Amandeep Gupta">
     <meta name="twitter:description" content="Portfolio , Amandeep Gupta : Web Developer | Software Developer | Programmer">
