--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 		</div>
 	</section>
 	
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script>
 <script type="text/javascript" src="dist/js/bootstrap.min.js"></script>
 <!-- Analytics-->
 <script>
