--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <!-- Twitter Summary card images must be at least 120x120px -->
     <meta name="twitter:image" content="http://codingeass.github.io/dist/img/profile.png">
 
-    <!-- Open Graph data -->
+    <!-- Open Graph data
     <meta property="og:title" content="Portfolio: Amandeep Gupta" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="http://codingeass.github.io/" />
     <meta property="og:image" content="http://codingeass.github.io/dist/img/profile.png" />
     <meta property="og:description" content="Portfolio , Amandeep Gupta : Web Developer | Software Developer | Programmer" /> 
     
-    <!-- endbuild -->
+    endbuild -->
 
 <link rel="stylesheet" href="dist/css/bootstrap.min.css"/>
 <link rel="stylesheet" href="dist/css/style.css"/>
@@ -100,7 +100,7 @@
 		</div>
 	</section>
 	
-<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript" src="dist/js/bootstrap.min.js"></script>
 <!-- Analytics-->
 <script>
