reverted previous changes

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <!-- Twitter Summary card images must be at least 120x120px -->
     <meta name="twitter:image" content="http://codingeass.github.io/dist/img/profile.png">
 
-    <!-- Open Graph data
+    <!-- Open Graph data -->
     <meta property="og:title" content="Portfolio: Amandeep Gupta" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="http://codingeass.github.io/" />
     <meta property="og:image" content="http://codingeass.github.io/dist/img/profile.png" />
     <meta property="og:description" content="Portfolio , Amandeep Gupta : Web Developer | Software Developer | Programmer" /> 
     
-    endbuild -->
+    <!-- endbuild -->
 
 <link rel="stylesheet" href="dist/css/bootstrap.min.css"/>
 <link rel="stylesheet" href="dist/css/style.css"/>
