--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta property="og:description" content="Portfolio , Amandeep Gupta : Web Developer | Software Developer | Programmer" /> 
     
     <!-- endbuild -->
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="dist/css/bootstrap.min.css"/>
 <link rel="stylesheet" href="dist/css/style.css"/>
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Tangerine">
